--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ]
   },
   "dependencies": {
-    "axios": "0.18.0",
+    "axios": ">=0.18.1",
     "base-x": "3.0.4",
     "buffer": "^5.2.1",
     "crypto-js": "3.1.9-1",
